Added some generic actions.